- Fixed Starter Bag so it doesn't drop a Queen Bee Spawner.