@@ -1,4 +1,4 @@
 displayName = Calamity QOL for Vanilla
 author = Pannoniae
-version = 0.2.4
+version = 0.2.6
 includeSource = true
