@@ -1,1 +1,2 @@
-- Fixed Starter Bag so it doesn't drop a Queen Bee Spawner.
+- Added Calamity accessory recipes.
+- Added shiny icons for the config.
